5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1735_3118.log
== TEST (2019-05-16 16:15:52) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	armizinho = n//1
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:15:57) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	armizinho = n//1
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:40) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n = n//10
	cont += 1
	print(n)
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:14) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n = n//1
	cont += 1
	print(n)
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:53) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n = n%371
	print(n)
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:08) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n = n%10
	print(n)
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:33) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n =n / 10
	print(n)
-- OUTPUT:
0.1
0.01
0.001
0.0001
1e-05
1.0000000000000002e-06
1.0000000000000002e-07
1.0000000000000002e-08
1.0000000000000003e-09
1.0000000000000003e-10
1.0000000000000003e-11
1.0000000000000002e-12
1.0000000000000002e-13
1.0000000000000002e-14
1e-15
1.0000000000000001e-16
1e-17
1e-18
1.0000000000000001e-19
1.0000000000000001e-20
1.0000000000000001e-21
1e-22
1.0000000000000001e-23
1.0000000000000001e-24
1.0000000000000002e-25
1.0000000000000002e-26
1.0000000000000002e-27
1.0000000000000002e-28
1.0000000000000002e-29
1.0000000000000003e-30
1.0000000000000003e-31
1.0000000000000003e-32
1.0000000000000004e-33
1.0000000000000004e-34
1.0000000000000004e-35
1.0000000000000004e-36
1.0000000000000005e-37
1.0000000000000005e-38
1.0000000000000004e-39
1.0000000000000003e-40
1.0000000000000004e-41
1.0000000000000004e-42
1.0000000000000003e-43
1.0000000000000003e-44
1.0000000000000003e-45
1.0000000000000002e-46
1.0000000000000002e-47
1.0000000000000003e-48
1.0000000000000003e-49
1.0000000000000004e-50
1.000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:55) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n =n // 10
	print(n)
-- OUTPUT:
0.1
0.01
0.001
0.0001
1e-05
1.0000000000000002e-06
1.0000000000000002e-07
1.0000000000000002e-08
1.0000000000000003e-09
1.0000000000000003e-10
1.0000000000000003e-11
1.0000000000000002e-12
1.0000000000000002e-13
1.0000000000000002e-14
1e-15
1.0000000000000001e-16
1e-17
1e-18
1.0000000000000001e-19
1.0000000000000001e-20
1.0000000000000001e-21
1e-22
1.0000000000000001e-23
1.0000000000000001e-24
1.0000000000000002e-25
1.0000000000000002e-26
1.0000000000000002e-27
1.0000000000000002e-28
1.0000000000000002e-29
1.0000000000000003e-30
1.0000000000000003e-31
1.0000000000000003e-32
1.0000000000000004e-33
1.0000000000000004e-34
1.0000000000000004e-35
1.0000000000000004e-36
1.0000000000000005e-37
1.0000000000000005e-38
1.0000000000000004e-39
1.0000000000000003e-40
1.0000000000000004e-41
1.0000000000000004e-42
1.0000000000000003e-43
1.0000000000000003e-44
1.0000000000000003e-45
1.0000000000000002e-46
1.0000000000000002e-47
1.0000000000000003e-48
1.0000000000000003e-49
1.0000000000000004e-50
1.000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:06) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	n =n // 10
	print(n)
	cont += 1
	
-- OUTPUT:
0.1
0.01
0.001
0.0001
1e-05
1.0000000000000002e-06
1.0000000000000002e-07
1.0000000000000002e-08
1.0000000000000003e-09
1.0000000000000003e-10
1.0000000000000003e-11
1.0000000000000002e-12
1.0000000000000002e-13
1.0000000000000002e-14
1e-15
1.0000000000000001e-16
1e-17
1e-18
1.0000000000000001e-19
1.0000000000000001e-20
1.0000000000000001e-21
1e-22
1.0000000000000001e-23
1.0000000000000001e-24
1.0000000000000002e-25
1.0000000000000002e-26
1.0000000000000002e-27
1.0000000000000002e-28
1.0000000000000002e-29
1.0000000000000003e-30
1.0000000000000003e-31
1.0000000000000003e-32
1.0000000000000004e-33
1.0000000000000004e-34
1.0000000000000004e-35
1.0000000000000004e-36
1.0000000000000005e-37
1.0000000000000005e-38
1.0000000000000004e-39
1.0000000000000003e-40
1.0000000000000004e-41
1.0000000000000004e-42
1.0000000000000003e-43
1.0000000000000003e-44
1.0000000000000003e-45
1.0000000000000002e-46
1.0000000000000002e-47
1.0000000000000003e-48
1.0000000000000003e-49
1.0000000000000004e-50
1.000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:35) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	if (n // 10 < 10 ):
	n =n // 10
	print(n)
	cont += 1
	
-- ERROR:
File "XXXX", line 8
    n =n // 10
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:45) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	if (n // 10 < 10 ):
		n =n // 10
		print(n)
	cont += 1
	
-- ERROR:
File "XXXX", line 8
    n =n // 10
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:30:01) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	if (n // 10 < 10 ):
		n =n // 10
		print(n)
	cont += 1
	
-- ERROR:
File "XXXX", line 8
    n =n // 10
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:30:06) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (n > 0):
	if (n // 10 < 10 ):
		n =n // 10
	print(n)
	cont += 1
	
-- ERROR:
File "XXXX", line 8
    n =n // 10
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:16) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (cont > 0):
	if (n // 10 < 10 ):
		n =n // 10
	print(n)
	cont += 1
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:35) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (cont > 0):
	if (n // 10 < 10 ):
		n =n // 10
	print(n)
	cont += 1
	n = int(input("insira um number: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:54) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (cont > 0):
	if (n // 10 < 10 ):
		n = n // 10
		print(n)
	cont += 1
	n = int(input("insira um number: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:24) 
-- CODE:
n = int(input("insira um number: "))


cont = 1

while (cont > 0):
	if (n // 10 > 10 ):
		n = n // 10
		print(n)
	cont += 1
	n = int(input("insira um number: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:35:13) 
-- CODE:
n = int(input("insira um number: "))


cont = 1
soma = 0
div = 10

while (cont > 0):
	leg = n +
	if (n // div < 10):
		soma = soma + 
		
-- ERROR:
File "XXXX", line 9
    leg = n +
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:08) 
-- CODE:
n = int(input("insira um number: "))


cont = 1
soma = 0
div = 10

while (cont > 0):
	leg = n // div
	if (leg == n % 10):
		soma = soma + leg**cont+1
	cont+= 1
		
-- ERROR:
File "XXXX", line 9
    leg = n +
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:15:30) 
-- CODE:
n = int(input("insira um number: "))


cont = 1
soma = 0
div = 10

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n//10 % 10
print(a3)
-- ERROR:
File "XXXX", line 9
    leg = n +
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:01) 
-- CODE:
n = int(input("insira um number: "))

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n//10 % 10
print(a3)
-- ERROR:
File "XXXX", line 9
    leg = n +
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:19) 
-- CODE:
n = int(input("insira um number: "))
	a1 = n//100
	a2 = n//10
	a3 = n//10 % 10
print(a3)
-- ERROR:
File "XXXX", line 2
    a1 = n//100
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:28) 
-- CODE:
n = int(input("insira um number: "))
a1 = n//100
a2 = n//10
a3 = n//10 % 10
print(a3)
-- ERROR:
File "XXXX", line 2
    a1 = n//100
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:36) 
-- CODE:
n = int(input("insira um number: "))
a1 = n//100
a2 = n//10
a3 = n//10 % 10
print(a3)
-- ERROR:
File "XXXX", line 2
    a1 = n//100
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:52) 
-- CODE:
n = int(input("insira um number: "))
a1 = n//100
a2 = n//10
a3 = n%10
print(a3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:21) 
-- CODE:
n = int(input("insira um number: "))

cont += 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cont += 1
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:32) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

print(soma)
-- OUTPUT:
3403
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:55) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:03) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:14) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:19) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:00) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = n//10
	a3 = n%10
	soma = a1**3 + a2**3 + a3**3
	n = int(input("insira um number: "))

	if (soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:52) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a1 = n//100
	a2 = (n%100) // 10
	a3 = n%10
	soma = a * a * a + b * b * b + c * c * c
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = a * a * a + b * b * b + c * c * c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:15) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a = n//100
	b = (n%100) // 10
	c = n%10
	soma = a * a * a + b * b * b + c * c * c
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:30) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a = n//100
	b = (n%100) // 10
	c = n%10
	soma = a * a * a + b * b * b + c * c * c
	n = int(input("insira um number: "))

if (soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:56) 
-- CODE:
n = int(input("insira um number: "))

cont = 1

while (n > 0):
	a = n//100
	b = (n%100) // 10
	c = n%10
	soma = a * a * a + b * b * b + c * c * c
	n = int(input("insira um number: "))

	if (soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
NAO ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:16) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (cont != 0)
	r = cont % 10
	soma = soma r*r*r
	cont = cont/10
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- ERROR:
File "XXXX", line 6
    while (cont != 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:20) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (cont != 0):
	r = cont % 10
	soma = soma r*r*r
	cont = cont/10
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- ERROR:
File "XXXX", line 8
    soma = soma r*r*r
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:26) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (cont != 0):
	r = cont % 10
	soma = soma + r*r*r
	cont = cont/10
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:46) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (cont != 0):
	r = cont % 10
	soma = soma + r*r*r
	cont = cont/10
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:02) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (cont > 0):
	r = cont % 10
	soma = soma + r*r*r
	cont = cont/10
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:16) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (cont > 0):
	r = cont % 10
	soma = soma + r*r*r
	cont = cont/10
	n = int(input("insira um number: "))
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:32) 
-- CODE:
n = int(input("insira um number: "))

cont = n
soma = 0

while (n > 0):
	r = cont % 10
	soma = soma + r*r*r
	cont = cont/10
	n = int(input("insira um number: "))
if (n == soma):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
	
-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:47:39) 
-- CODE:
for i in range (1001):
	num = i
	result = 0
	n = len(str(i))
	while (i != 0):
		digit = i%10
		result = result + digit**n
		i = i//10
	if num == result :
		print(num)
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
153
370
371
407
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:48:15) 
-- CODE:
for i in range (1001):
	num = i
	result = 0
	n = len(str(i))
	while (i != 0):
		digit = i%10
		result = result + digit**n
		i = i//10
	if num == result :
		print("armstrong")
-- OUTPUT:
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
armstrong
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:53) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
	while (n > 0):
		digit = n%10
		result = result + digit**n
		n = n//10
	if num == result :
		print("armstrong")
-- ERROR:
File "XXXX", line 3
    while (n > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:50:05) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
if num == result :
	print("armstrong")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    result = result + digit**n
NameError: name 'result' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:51:58) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
if num == result :
	print("armstrong")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if num == result :
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:52:08) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
if n == result :
	print("armstrong")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if num == result :
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:52:39) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
if n == result :
	print("armstrong")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if num == result :
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:53:17) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
if n == result :
	print("armstrong")
else: 
	print("NAO ARMSTRONG")

-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:53:34) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
	n = int(input("insira o num: "))

	
if n == result :
	print("armstrong")
else: 
	print("NAO ARMSTRONG")

-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:55:14) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
	n = int(input("insira o num: "))

	
	if n == result :
		print("ARMSTRONG")
	else: 
		print("NAO ARMSTRONG")

-- OUTPUT:
NAO ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:05:37) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
	n = int(input("insira o num: "))
	if n == result :
		print("ARMSTRONG")
	if n /=
		print("NAO ARMSTRONG")

-- ERROR:
File "XXXX", line 12
    if n /=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:05:50) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
	n = int(input("insira o num: "))
	if n == result :
		print("ARMSTRONG")
	if n /= result : 
		print("NAO ARMSTRONG")

-- ERROR:
File "XXXX", line 12
    if n /= result : 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:06:00) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	digit = n%10
	result = result + digit**n
	n = n//10
	n = int(input("insira o num: "))
	if n == result :
		print("ARMSTRONG")
	if n != result : 
		print("NAO ARMSTRONG")

-- OUTPUT:
NAO ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:07:16) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
print (s)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:13:20) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	

-- OUTPUT:
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:14:40) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))


-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:19:28) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))


-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:21:06) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	if (resuly != n)
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))


-- ERROR:
File "XXXX", line 12
    if (resuly != n)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:21:12) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	if (resuly != n):
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if (resuly != n):
NameError: name 'resuly' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:21:20) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	if (result != n):
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))


-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:23:25) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	if (result != n):
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))
	s = len(str(n))


-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 13:25:46) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	result = d1**s + d2**s + d3**s
	if (result == n):
		print("ARMSTRONG")
	if (result != n):
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))
	s = len(str(n))


-- EXECUTION TIME:
0.150996
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:03:30) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0
num = n
while (n > 0):
	d1 = n % 10
	result = result + (d1**s)
	n = int(n/10)
	if (result == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	

-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:03:35) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0
num = n
while (n > 0):
	d1 = n % 10
	result = result + (d1**s)
	n = int(n/10)
	if (result == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	

-- OUTPUT:
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:04:07) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0
num = n
while (n > 0):
	d1 = n % 10
	result = result + (d1**s)
	n = int(n/10)
	if (num == result):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	

-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:04:40) 
-- CODE:
n = int(input("insira o num: "))
s = len(str(n))
result = 0
num = n
while (n > 0):
	d1 = n % 10
	result = result + (d1**s)
	n = int(n/10)
	if (num == result):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n = int(input("insira o num: "))

	

-- OUTPUT:
ARMSTRONG
NAO ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:13:52) 
-- CODE:
n = int(input("numero: "))

while (n>=0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while (cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1
	if (soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n = int(input("Numero: "))

	

-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 14:14:04) 
-- CODE:
n = int(input("numero: "))

while (n>=0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while (cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1
	if (soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
	n = int(input("Numero: "))

	

-- EXECUTION TIME:
0.237964
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
